Fix AddLanguages search input overflowing viewport on mobile

--- a/src/screens/AddLanguages.css
+++ b/src/screens/AddLanguages.css
@@ -7,6 +7,7 @@
 
 .add-languages-search {
   flex-shrink: 0;
+  width: calc(100% - 32px);
   margin: 16px 16px 0;
 }
 
